add birthdate and covid19

--- a/.gitignore
+++ b/.gitignore
@@ -7,4 +7,6 @@
 # specified
 /dataset/english_word_frequency/suneungs/
 /dataset/english_word_frequency/englsih_texts/
+/dataset/covid19/csse_covid_19_daily_reports/
+
 /resources/
